--- a/projects/angular/src/layout/nav/_properties.subnav.scss
+++ b/projects/angular/src/layout/nav/_properties.subnav.scss
@@ -8,8 +8,11 @@
 @use '@cds/core/tokens/tokens.scss';
 
 @include mixins.exports('subnav.properties') {
-  :root [cds-theme] {
-    // Usage: ../layout/nav/_subnav.clarity.scss
-    --clr-subnav-bg-color: #{tokens.$cds-alias-object-container-background};
+  :root {
+    &,
+    & [cds-theme] {
+      // Usage: ../layout/nav/_subnav.clarity.scss
+      --clr-subnav-bg-color: #{tokens.$cds-alias-object-container-background};
+    }
   }
 }
