--- a/projects/angular/src/popover/tooltip/_properties.tooltip.scss
+++ b/projects/angular/src/popover/tooltip/_properties.tooltip.scss
@@ -9,11 +9,19 @@
 @use '@cds/core/tokens/tokens.scss';
 
 @include mixins.exports('tooltip.properties') {
-  :root [cds-theme] {
+  :root {
     // Usage: ../popover/tooltip/_tooltips.clarity.scss
-    --clr-tooltip-background-color: #{tokens.$cds-alias-object-interaction-color-active};
-    --clr-tooltip-color: #{tokens.$cds-alias-typography-color-100};
-    --clr-tooltip-border-radius: #{density.$clr-base-border-radius-s};
     --clr-tooltip-font-weight: #{tokens.$cds-global-typography-body-font-weight};
+
+    &,
+    & [clr-density] {
+      --clr-tooltip-border-radius: #{density.$clr-base-border-radius-s};
+    }
+
+    &,
+    & [cds-theme] {
+      --clr-tooltip-background-color: #{tokens.$cds-alias-object-interaction-color-active};
+      --clr-tooltip-color: #{tokens.$cds-alias-typography-color-100};
+    }
   }
 }
