--- a/projects/angular/src/progress/progress-bars/_properties.progress-bars.scss
+++ b/projects/angular/src/progress/progress-bars/_properties.progress-bars.scss
@@ -8,13 +8,16 @@
 @use '@cds/core/tokens/tokens.scss';
 
 @include mixins.exports('progress.properties') {
-  :root [cds-theme] {
-    // Usage: ../progress/progress-bars/_progress-bars.clarity.scss
-    --clr-progress-default-color: #{tokens.$cds-alias-status-info}; // blue
-    --clr-progress-alt-color-1: #{tokens.$cds-alias-status-success}; // green
-    --clr-progress-alt-color-2: #{tokens.$cds-alias-status-danger-shade}; // red
-    --clr-progress-alt-color-3: #{tokens.$cds-alias-status-warning}; // yellow
-    --clr-progress-bg-color: #{tokens.$cds-alias-object-container-background-shade};
-    --clr-progress-label-color: #{tokens.$cds-alias-typography-color-400};
+  :root {
+    &,
+    & [cds-theme] {
+      // Usage: ../progress/progress-bars/_progress-bars.clarity.scss
+      --clr-progress-default-color: #{tokens.$cds-alias-status-info}; // blue
+      --clr-progress-alt-color-1: #{tokens.$cds-alias-status-success}; // green
+      --clr-progress-alt-color-2: #{tokens.$cds-alias-status-danger-shade}; // red
+      --clr-progress-alt-color-3: #{tokens.$cds-alias-status-warning}; // yellow
+      --clr-progress-bg-color: #{tokens.$cds-alias-object-container-background-shade};
+      --clr-progress-label-color: #{tokens.$cds-alias-typography-color-400};
+    }
   }
 }
