--- a/projects/angular/src/layout/vertical-nav/_vertical-nav.clarity.scss
+++ b/projects/angular/src/layout/vertical-nav/_vertical-nav.clarity.scss
@@ -341,12 +341,7 @@
       .nav-content > .nav-link,
       .nav-group .nav-group-text,
       .nav-group .nav-group-trigger {
-        @include mixins.generate-typography-token(
-          'SUBSECTION-16-SB',
-          (
-            font-weight: vertical-nav-variables.$clr-vertical-nav-item-top-level-font-weight,
-          )
-        );
+        font-weight: vertical-nav-variables.$clr-vertical-nav-item-top-level-font-weight;
       }
 
       .nav-group-children .nav-link {
