--- a/projects/demo/src/styles.scss
+++ b/projects/demo/src/styles.scss
@@ -4,11 +4,11 @@
  * This software is released under MIT license.
  * The full license information can be found in LICENSE in the root directory of this project.
  */
-@import '../../../dist/@cds/core/styles/module.reset.min.css';
-@import '../../../dist/@cds/core/styles/module.tokens.min.css';
-@import '../../../dist/@cds/core/styles/module.layout.min.css';
-@import '../../../dist/@cds/core/styles/module.typography.min.css';
-@import '../../../dist/@cds/core/styles/theme.dark.min.css';
+@import '@cds/core/styles/module.reset.min.css';
+@import '@cds/core/styles/module.tokens.min.css';
+@import '@cds/core/styles/module.layout.min.css';
+@import '@cds/core/styles/module.typography.min.css';
+@import '@cds/core/styles/theme.dark.min.css';
 @import './app/_utils/clarity-variables';
 @import '../../angular/src/utils/variables/variables';
 @import '../../ui/src/temp-overrides.scss'; // @TODO remove in v18
