--- a/projects/angular/src/layout/nav/_links.clarity.scss
+++ b/projects/angular/src/layout/nav/_links.clarity.scss
@@ -40,11 +40,14 @@
           }
         }
       }
-      &:active {
-        color: nav-variables.$clr-link-active-color;
-        cds-icon,
-        clr-icon {
+      &:visited,
+      &:link {
+        &:active {
           color: nav-variables.$clr-link-active-color;
+          cds-icon,
+          clr-icon {
+            color: nav-variables.$clr-link-active-color;
+          }
         }
       }
     }
