--- a/projects/angular/src/layout/_properties.card.scss
+++ b/projects/angular/src/layout/_properties.card.scss
@@ -5,26 +5,31 @@
  * The full license information can be found in LICENSE in the root directory of this project.
  */
 @use '../utils/mixins';
-@use '../utils/variables/variables';
-@use './variables.card' as card-variables;
 @use '../utils/variables/variables.density' as density;
 @use '@cds/core/tokens/tokens.scss';
 
 @include mixins.exports('card.properties') {
-  :root [cds-theme] {
-    // Usage: ../layout/_card.clarity.scss
-    --clr-card-bg-color: #{tokens.$cds-alias-object-container-background};
-    --clr-card-divider-color: #{tokens.$cds-alias-object-border-color};
-    --clr-card-title-color: #{tokens.$cds-alias-typography-color-400};
+  :root {
     --clr-card-title-font-weight: #{tokens.$cds-global-typography-section-font-weight};
-    --clr-card-border-radius: #{density.$clr-base-border-radius-s};
     --clr-card-border-width: #{tokens.$cds-alias-object-border-width-100};
-    --clr-card-border-color: #{tokens.$cds-alias-object-border-color};
-    --clr-card-box-shadow: #{tokens.$cds-alias-object-shadow-300};
-    --clr-card-clickable-border-color: #{tokens.$cds-alias-object-interaction-background-highlight};
-    --clr-card-clickable-box-shadow: 0 0 0 #{tokens.$cds-global-space-1} var(--clr-card-clickable-border-color);
-    --clr-card-header-title-color: var(--clr-card-title-color);
-    --clr-card-content-title-color: var(--clr-card-title-color);
-    --clr-card-text-color: #{tokens.$cds-alias-typography-color-400};
+
+    &,
+    & [clr-density] {
+      --clr-card-border-radius: #{density.$clr-base-border-radius-s};
+    }
+
+    &,
+    & [cds-theme] {
+      --clr-card-bg-color: #{tokens.$cds-alias-object-container-background};
+      --clr-card-divider-color: #{tokens.$cds-alias-object-border-color};
+      --clr-card-title-color: #{tokens.$cds-alias-typography-color-400};
+      --clr-card-border-color: #{tokens.$cds-alias-object-border-color};
+      --clr-card-box-shadow: #{tokens.$cds-alias-object-shadow-300};
+      --clr-card-clickable-border-color: #{tokens.$cds-alias-object-interaction-background-highlight};
+      --clr-card-clickable-box-shadow: 0 0 0 #{tokens.$cds-global-space-1} var(--clr-card-clickable-border-color);
+      --clr-card-header-title-color: var(--clr-card-title-color);
+      --clr-card-content-title-color: var(--clr-card-title-color);
+      --clr-card-text-color: #{tokens.$cds-alias-typography-color-400};
+    }
   }
 }
