--- a/projects/demo/src/app/datagrid/expandable-rows/expandable-rows.html
+++ b/projects/demo/src/app/datagrid/expandable-rows/expandable-rows.html
@@ -68,9 +68,6 @@
       <span class="color-square" [style.backgroundColor]="user.color"></span>
     </clr-dg-cell>
 
-    <!-- Example using a wrapper component -->
-    <!--<detail-wrapper *clrIfExpanded ngProjectAs="clr-dg-row-detail" class="datagrid-row-flex"></detail-wrapper>-->
-
     <ng-container ngProjectAs="clr-dg-row-detail" *ngIf="!removeRowDetail">
       <clr-dg-row-detail *clrIfExpanded [clrDgReplace]="replace">
         <ng-template [clrFakeLoader]="slowLoad" clrLoading>
@@ -99,6 +96,33 @@
         </ng-template>
       </clr-dg-row-detail>
     </ng-container>
+  </clr-dg-row>
+  <clr-dg-footer>{{users.length}} users</clr-dg-footer>
+</clr-datagrid>
+
+<h3>Use Expand Wrapper Component</h3>
+
+<clr-datagrid [style.height.px]="fixedHeight ? 458 : null" [(clrDgSelected)]="selected">
+  <clr-dg-column>User ID</clr-dg-column>
+  <clr-dg-column [clrDgField]="'name'">Name</clr-dg-column>
+  <clr-dg-column [clrDgField]="'creation'">
+    <ng-container *clrDgHideableColumn="{hidden: date}">Creation date</ng-container>
+  </clr-dg-column>
+  <clr-dg-column [clrDgField]="'pokemon.name'">Pokemon</clr-dg-column>
+  <clr-dg-column [clrDgField]="'color'">Favorite color</clr-dg-column>
+
+  <clr-dg-row *ngFor="let user of users.slice(0, 4);let i = index" [clrDgItem]="user">
+    <clr-dg-cell>{{user.id}}</clr-dg-cell>
+    <clr-dg-cell>{{user.name}}</clr-dg-cell>
+    <clr-dg-cell>{{user.creation | date}}</clr-dg-cell>
+    <clr-dg-cell>{{user.pokemon.name}}</clr-dg-cell>
+    <clr-dg-cell>
+      <span class="color-square" [style.backgroundColor]="user.color"></span>
+    </clr-dg-cell>
+
+    <!-- Example using a wrapper component -->
+    <detail-wrapper *clrIfExpanded="i === 2" ngProjectAs="clr-dg-row-detail" class="datagrid-row-flex"></detail-wrapper>
+    <detail-wrapper *clrIfExpanded="i === 2" ngProjectAs="clr-dg-row-detail" class="datagrid-row-flex"></detail-wrapper>
   </clr-dg-row>
   <clr-dg-footer>{{users.length}} users</clr-dg-footer>
 </clr-datagrid>
