--- a/projects/angular/src/emphasis/_labels.clarity.scss
+++ b/projects/angular/src/emphasis/_labels.clarity.scss
@@ -77,7 +77,7 @@
       text-decoration: none;
     }
 
-    cds-icon {
+    cds-icon:not([size]) {
       @include mixins.min-equilateral(density.$clr-base-icon-size-s);
     }
 
