--- a/projects/angular/src/forms/combobox/_combobox.clarity.scss
+++ b/projects/angular/src/forms/combobox/_combobox.clarity.scss
@@ -183,7 +183,9 @@
     clr-icon[shape='angle'] {
       color: combobox-variables.$clr-combobox-trigger-font-color;
 
-      @include mixins.min-equilateral(combobox-variables.$clr-combobox-caret-icon-size);
+      &:not([size]) {
+        @include mixins.min-equilateral(combobox-variables.$clr-combobox-caret-icon-size);
+      }
     }
   }
 
