--- a/projects/angular/src/forms/styles/_input-group.clarity.scss
+++ b/projects/angular/src/forms/styles/_input-group.clarity.scss
@@ -62,7 +62,10 @@
       cds-icon,
       clr-icon {
         fill: forms-variables.$clr-forms-icon-color;
-        @include mixins.equilateral(var(--clr-forms-input-group-icon-action-size));
+
+        &:not([size]) {
+          @include mixins.equilateral(var(--clr-forms-input-group-icon-action-size));
+        }
       }
     }
   }
