--- a/projects/angular/src/popover/signpost/_signposts.clarity.scss
+++ b/projects/angular/src/popover/signpost/_signposts.clarity.scss
@@ -32,7 +32,9 @@
 
       cds-icon,
       clr-icon {
-        @include mixins.equilateral(density.$clr-base-icon-size-l);
+        &:not([size]) {
+          @include mixins.equilateral(density.$clr-base-icon-size-l);
+        }
         color: signpost-variables.$clr-signpost-action-color;
       }
 
@@ -54,7 +56,7 @@
 
       @include mixins.min-equilateral(density.$clr-base-icon-size-s);
 
-      cds-icon,
+      cds-icon:not([size]),
       clr-icon {
         @include mixins.min-equilateral(density.$clr-base-icon-size-s);
       }
