--- a/projects/angular/src/emphasis/alert/_alert.clarity.scss
+++ b/projects/angular/src/emphasis/alert/_alert.clarity.scss
@@ -226,7 +226,7 @@
       flex: 0 0 density.$clr-base-icon-size-l;
       @include mixins.equilateral(density.$clr-base-icon-size-l);
 
-      cds-icon,
+      cds-icon:not([size]),
       clr-icon {
         @include mixins.min-equilateral(density.$clr-base-icon-size-l);
       }
@@ -501,7 +501,10 @@
     cds-icon,
     clr-icon {
       color: var(--clr-app-alert-pager-text-color);
-      @include mixins.min-equilateral(density.$clr-base-icon-size-s);
+
+      &:not([size]) {
+        @include mixins.min-equilateral(density.$clr-base-icon-size-s);
+      }
 
       @each $alertType in $alertTypes {
         .alert-#{$alertType} & {
