--- a/projects/angular/src/layout/vertical-nav/_vertical-nav.clarity.scss
+++ b/projects/angular/src/layout/vertical-nav/_vertical-nav.clarity.scss
@@ -186,7 +186,10 @@
 
       cds-icon {
         margin-right: 0;
-        @include mixins.equilateral(density.$clr-base-icon-size-s);
+
+        &:not([size]) {
+          @include mixins.equilateral(density.$clr-base-icon-size-s);
+        }
       }
 
       &.on-collapse {
