--- a/projects/angular/src/modal/_modal.clarity.scss
+++ b/projects/angular/src/modal/_modal.clarity.scss
@@ -222,8 +222,10 @@
       clr-icon {
         fill: modal-variables.$clr-modal-close-color;
 
-        // per measurement, this results in an icon that is 24x24...
-        @include mixins.equilateral(modal-variables.$clr-modal-icon-size);
+        &:not([size]) {
+          // per measurement, this results in an icon that is 24x24...
+          @include mixins.equilateral(modal-variables.$clr-modal-icon-size);
+        }
       }
 
       &:hover {
