--- a/projects/angular/src/timeline/_timeline.clarity.scss
+++ b/projects/angular/src/timeline/_timeline.clarity.scss
@@ -25,7 +25,7 @@
     min-width: mixins.baselinePx(175);
     gap: timeline-variables.$clr-timeline-step-internal-spacing;
 
-    cds-icon,
+    cds-icon:not([size]),
     clr-icon {
       @include mixins.min-equilateral(timeline-variables.$clr-timeline-icon-size);
     }
@@ -90,7 +90,9 @@
     flex-direction: column;
     cds-icon,
     clr-icon {
-      @include mixins.equilateral(timeline-variables.$clr-timeline-default-icon-size);
+      &:not([size]) {
+        @include mixins.equilateral(timeline-variables.$clr-timeline-default-icon-size);
+      }
       min-width: initial;
       min-height: initial;
       &[shape='circle'],
