fix(ui): remove deprecated baselineRem tokens

--- a/projects/angular/src/forms/styles/_mixins.forms.scss
+++ b/projects/angular/src/forms/styles/_mixins.forms.scss
@@ -135,7 +135,7 @@
   position: absolute;
   display: inline-block;
   @include mixins.equilateral($size);
-  border: variables.$clr-global-borderwidth solid $border-color;
+  border: tokens.$cds-global-space-1 solid $border-color;
 }
 
 @mixin custom-inputs($height) {
