--- a/projects/demo/src/app/card/card.demo.scss
+++ b/projects/demo/src/app/card/card.demo.scss
@@ -9,7 +9,7 @@
 
 .clr-example {
   & > .card {
-    max-width: $clr_baselineRem_20;
+    max-width: calc(10 * var(--cds-global-space-12)); // 480px
   }
 
   &.nomargin {
