--- a/projects/demo/src/app/tooltips/tooltips.demo.scss
+++ b/projects/demo/src/app/tooltips/tooltips.demo.scss
@@ -10,7 +10,7 @@
   position: relative;
 
   &.squeeze {
-    padding: $clr_baselineRem_1;
+    padding: var(--cds-global-space-9);
   }
 
   &.example-center {
