--- a/projects/angular/src/layout/grid/mixins/_grid-framework.scss
+++ b/projects/angular/src/layout/grid/mixins/_grid-framework.scss
@@ -7,6 +7,7 @@
 
 @use 'sass:map';
 @use '../../../utils/variables/variables';
+@use '@cds/core/tokens/tokens.scss';
 @use 'breakpoint';
 @use 'grid';
 
@@ -18,7 +19,7 @@
   // Common properties for all breakpoints
   %clr-grid-column {
     width: 100%;
-    min-height: variables.$clr_baselineRem_1px; // Prevent columns from collapsing when empty
+    min-height: tokens.$cds-global-space-1; // Prevent columns from collapsing when empty
     padding-right: $gutter;
     padding-left: $gutter;
   }
