--- a/projects/angular/src/utils/_close.clarity.scss
+++ b/projects/angular/src/utils/_close.clarity.scss
@@ -6,6 +6,7 @@
  */
 @use 'sass:string';
 @use 'mixins';
+@use '@cds/core/tokens/tokens.scss';
 @use 'variables/variables.global';
 
 @include mixins.exports('close.clarity') {
@@ -21,7 +22,7 @@
 
   .close {
     float: right;
-    font-size: variables.$clr_baselineRem_1_5;
+    font-size: tokens.$cds-global-space-11;
     transition: color linear 0.2s;
     font-weight: 200;
     text-shadow: none;
