--- a/projects/angular/src/utils/_mixins.scss
+++ b/projects/angular/src/utils/_mixins.scss
@@ -26,8 +26,8 @@ $imported-modules: () !default;
 //Outline Styles
 $clr-outline-color: hsl(197, 68%, 65%) !default;
 $clr-outline-color-inverse: hsla(0, 0%, 100%, 0.09) !default;
-$clr-outline-blur: variables.$clr_baselineRem_2px;
-$clr-outline-spread: variables.$clr_baselineRem_2px;
+$clr-outline-blur: tokens.$cds-global-space-2;
+$clr-outline-spread: tokens.$cds-global-space-2;
 
 @mixin include-outline-style-form-fields($offset: tokens.$cds-alias-object-interaction-outline-offset) {
   outline: tokens.$cds-alias-object-interaction-outline;
@@ -70,25 +70,25 @@ $clr-outline-spread: variables.$clr_baselineRem_2px;
   width: 1px !important;
 
   left: 0 !important;
-  top: variables.$clr_baselineRem_-1px !important;
+  top: calc(-1 * #{tokens.$cds-global-space-1}) !important;
 
   overflow: hidden !important;
   visibility: hidden !important;
 
   padding: 0 !important;
-  margin: 0 0 variables.$clr_baselineRem_-1px 0 !important;
+  margin: 0 0 calc(-1 * #{tokens.$cds-global-space-1}) 0 !important;
 }
 
 @mixin focus-within() {
   &:focus-within,
   &.focus-within {
-    outline: variables.$clr_baselineRem_2px solid Highlight;
+    outline: tokens.$cds-global-space-2 solid Highlight;
   }
 
   @media (-webkit-min-device-pixel-ratio: 0) {
     &:focus-within,
     &.focus-within {
-      outline: variables.$clr_baselineRem_5px auto -webkit-focus-ring-color;
+      outline: baselinePx(5) auto -webkit-focus-ring-color;
     }
   }
 }
