--- a/projects/demo/src/app/button-group/button-group.demo.scss
+++ b/projects/demo/src/app/button-group/button-group.demo.scss
@@ -8,19 +8,19 @@
 @import '../_utils/clarity-variables';
 
 .clr-example {
-  border: $clr_baselineRem_1px solid hsl(0, 0%, 80%);
-  border-radius: $clr-global-borderradius;
-  padding: $clr_baselineRem_1;
+  border: var(--cds-global-space-1) solid hsl(0, 0%, 80%);
+  border-radius: var(--cds-alias-object-border-radius-100);
+  padding: var(--cds-global-space-9);
 
   &.space-below {
-    margin-bottom: $clr_baselineRem_4;
+    margin-bottom: var(--cds-global-space-15);
   }
 
   &.example-min-height {
-    min-height: $clr_baselineRem_9;
+    min-height: calc(10 * var(--cds-global-space-9)); // 240px
   }
 
   &.example-padding-up {
-    padding: $clr_baselineRem_4 $clr_baselineRem_1 $clr_baselineRem_1 $clr_baselineRem_1;
+    padding: var(--cds-global-space-15) var(--cds-global-space-9) var(--cds-global-space-9) var(--cds-global-space-9);
   }
 }
