--- a/projects/demo/src/app/iconography/iconography.demo.scss
+++ b/projects/demo/src/app/iconography/iconography.demo.scss
@@ -8,20 +8,20 @@
 @import '../../../../angular/src/utils/variables/variables.global';
 
 .selection-preview-settings {
-  max-width: $clr_baselineRem_500px;
+  max-width: var(--cds-global-layout-width-xs);
 }
 
 .clr-icon-collection {
-  padding: $clr_baselineRem_1;
+  padding: var(--cds-global-space-9);
 
   .clr-icon-item {
-    padding: $clr_baselineRem_0_5 $clr_baselineRem_0_25;
+    padding: var(--cds-global-space-6) var(--cds-global-space-4);
     white-space: nowrap;
 
     cds-icon {
-      width: $clr_baselineRem_1;
-      height: $clr_baselineRem_1;
-      margin: 0 $clr_baselineRem_0_5;
+      width: var(--cds-global-space-9);
+      height: var(--cds-global-space-9);
+      margin: 0 var(--cds-global-space-6);
     }
 
     span.icon-shape-name {
@@ -36,16 +36,16 @@
   justify-content: center;
   background: transparent;
   margin: 0;
-  padding: $clr_baselineRem_0_5 0;
+  padding: var(--cds-global-space-6) 0;
 
   &.inverse {
     background: hsl(218, 14%, 30%);
-    margin: $clr_baselineRem_0_5 0 0;
+    margin: var(--cds-global-space-6) 0 0;
   }
 
   cds-icon {
-    width: $clr_baselineRem_1_5;
-    height: $clr_baselineRem_1_5;
-    margin: 0 $clr_baselineRem_0_25;
+    width: var(--cds-global-space-11);
+    height: var(--cds-global-space-11);
+    margin: 0 var(--cds-global-space-4);
   }
 }
