--- a/projects/demo/src/app/popovers/popovers.demo.scss
+++ b/projects/demo/src/app/popovers/popovers.demo.scss
@@ -8,11 +8,11 @@
 @import '../_utils/clarity-variables';
 
 .dummy-menu {
-  border: $clr-global-borderwidth solid;
-  padding: $clr_baselineRem_0_5;
+  border: var(--cds-global-space-1) solid;
+  padding: var(--cds-global-space-6);
   background: hsl(0, 0%, 100%);
-  border-radius: $clr-global-borderradius;
-  margin-top: $clr_baselineRem_0_75;
+  border-radius: var(--cds-alias-object-border-radius-100);
+  margin-top: var(--cds-global-space-8);
 
   z-index: 1000;
 }
