--- a/projects/demo/src/app/typography/line-height.demo.scss
+++ b/projects/demo/src/app/typography/line-height.demo.scss
@@ -53,24 +53,24 @@
 }
 
 @mixin lhe-test-box-border() {
-  border-width: var(--clr-global-borderwidth, #{$clr-global-borderwidth});
+  border-width: var(--cds-global-space-1);
   border-style: solid;
   border-color: var(--clr-color-neutral-300, #{$clr-color-neutral-300});
 }
 
 @mixin lhe-test-box-pad-color() {
-  box-shadow: inset 0 0 0 $clr_baselineRem_0_5 var(--clr-color-success-100, #{$clr-color-success-100});
+  box-shadow: inset 0 0 0 var(--cds-global-space-6) var(--clr-color-success-100, #{$clr-color-success-100});
 }
 
 .title {
-  border-bottom: $clr_baselineRem_2px solid;
+  border-bottom: var(--cds-global-space-2) solid;
   border-bottom-color: var(--clr-color-neutral-800, #{$clr-color-neutral-800});
 }
 
 .box-test,
 .button-test,
 .card-test {
-  padding-top: $clr_baselineRem_1;
+  padding-top: var(--cds-global-space-9);
 }
 
 .test-box,
@@ -78,7 +78,7 @@
 .just-neutral-box,
 .just-text-box {
   display: inline-block;
-  padding: $clr_baselineRem_0_5;
+  padding: var(--cds-global-space-6);
   @include lhe-test-box-pad-color();
   @include lhe-test-box-border();
 
@@ -88,13 +88,13 @@
 
   p + p {
     // NOTE: now we have to set margins between P tags or things get too cozy
-    margin-top: $clr_baselineRem_0_75;
+    margin-top: var(--cds-global-space-8);
   }
 }
 
 .neutral-box,
 .just-neutral-box {
-  margin-right: $clr_baselineRem_1;
+  margin-right: var(--cds-global-space-9);
 }
 
 .test-card,
@@ -104,32 +104,31 @@
   @include lhe-test-box-border();
   display: flex;
   margin: 0;
-  margin-left: $clr_baselineRem_1;
-  padding: $clr_baselineRem_0_5;
+  margin-left: var(--cds-global-space-9);
+  padding: var(--cds-global-space-6);
   width: 100%;
 
   img {
     flex: 0 1 auto;
-    margin-right: $clr_baselineRem_0_75;
+    margin-right: var(--cds-global-space-8);
   }
 
   p {
-    font-size: $clr_baselineRem_1;
+    font-size: var(--cds-global-space-9);
     margin: 0;
   }
 }
 
 .neutral-card {
-  margin-left: $clr_baselineRem_0_5;
+  margin-left: var(--cds-global-space-6);
 }
 
 .button-test .btn {
   @include lhe-test-box-pad-color();
-  font-size: $clr_baselineRem_0_583;
 }
 
 .test-btn {
-  padding: $clr_baselineRem_0_5;
+  padding: var(--cds-global-space-6);
 }
 
 .font-tester {
@@ -141,8 +140,8 @@
 }
 
 h1.test-subject {
-  box-shadow: inset 0 0 0 $clr_baselineRem_8px var(--clr-color-warning-500, #{$clr-color-warning-500});
-  padding: $clr_baselineRem_8px;
+  box-shadow: inset 0 0 0 var(--cds-global-space-5) var(--clr-color-warning-500, #{$clr-color-warning-500});
+  padding: var(--cds-global-space-5);
 
   &.line-height-eraser {
     @include lhe-test-crop(1.6);
@@ -151,7 +150,7 @@ h1.test-subject {
 
 .lhe-test-well {
   background: var(--clr-color-neutral-100, #{$clr-color-neutral-100});
-  margin-top: $clr_baselineRem_1;
-  padding: $clr_baselineRem_0_5;
-  border-radius: var(--clr-global-borderradius, #{$clr-global-borderradius});
+  margin-top: var(--cds-global-space-9);
+  padding: var(--cds-global-space-6);
+  border-radius: var(--cds-alias-object-border-radius-100);
 }
