feat: upgrate to angular 17

--- a/projects/demo/src/app/color/color-palette.demo.html
+++ b/projects/demo/src/app/color/color-palette.demo.html
@@ -7,7 +7,7 @@
 
 <clr-tabs>
   <clr-tab>
-    <button clrTabLink>Clarity Colors (@3.0+)</button>
+    <button clrTabLink>Clarity Colors (&#64;3.0+)</button>
     <clr-tab-content *clrIfActive>
       <div class="clr-row">
         <div class="clr-col-sm-6 clr-col-12" *ngFor="let palette of clarityPalettes">
@@ -30,7 +30,7 @@
     </clr-tab-content>
   </clr-tab>
   <clr-tab>
-    <button clrTabLink id="link1">Legacy Colors (@2.0 deprecated)</button>
+    <button clrTabLink id="link1">Legacy Colors (&#64;2.0 deprecated)</button>
     <clr-tab-content id="content1" *clrIfActive>
       <p>Colors that are twice as tall are part of the base color palette.</p>
 
