--- a/projects/demo/src/app/labels/labels-clickable.demo.html
+++ b/projects/demo/src/app/labels/labels-clickable.demo.html
@@ -14,11 +14,11 @@
 </div>
 <div class="clr-example">
   <a href="javascript://" class="label label-blue clickable">
-    <span class="text">james@test.com</span>
+    <span class="text">james&#64;test.com</span>
     <cds-icon shape="close"></cds-icon>
   </a>
   <a href="javascript://" class="label label-blue clickable">
-    <span class="text">jimmy@test.com</span>
+    <span class="text">jimmy&#64;test.com</span>
     <cds-icon shape="close"></cds-icon>
   </a>
 </div>
