--- a/projects/demo/src/app/nav/header-types.demo.html
+++ b/projects/demo/src/app/nav/header-types.demo.html
@@ -204,7 +204,7 @@
       <div class="header-actions">
         <clr-dropdown>
           <button class="nav-text" clrDropdownTrigger>
-            john.doe@vmware.com
+            john.doe&#64;vmware.com
             <cds-icon shape="angle" direction="down" inverse></cds-icon>
           </button>
           <clr-dropdown-menu clrPosition="bottom-right">
