--- a/projects/demo/src/app/datagrid/virtual-scroll-server-side/virtual-scroll-server-side.html
+++ b/projects/demo/src/app/datagrid/virtual-scroll-server-side/virtual-scroll-server-side.html
@@ -20,7 +20,7 @@
   [clrDgLoading]="loading"
   [clrLoadingMoreItems]="loadingMoreItems"
   [(clrDgSelected)]="selected"
-  [clrDgItemsTrackBy]="trackItemById"
+  [clrDgItemsIdentityFn]="trackItemById"
   (clrDgRefresh)="refresh($event)"
   class="datagrid-compact"
   style="height: 30rem"
