--- a/projects/demo/src/app/datagrid/preserve-selection/preserve-selection.html
+++ b/projects/demo/src/app/datagrid/preserve-selection/preserve-selection.html
@@ -187,7 +187,7 @@
   (clrDgRefresh)="refresh($event)"
   [clrDgLoading]="loading"
   [clrDgPreserveSelection]="preserveFilteringServerTrackBy"
-  [clrDgItemsTrackBy]="trackItemById"
+  [clrDgItemsIdentityFn]="trackItemById"
 >
   <clr-dg-column>User ID</clr-dg-column>
   <clr-dg-column [clrDgField]="'name'" [(clrFilterValue)]="nameFilterServerTrackBy">Name</clr-dg-column>
