--- a/projects/demo/src/app/typography/line-height.demo.scss
+++ b/projects/demo/src/app/typography/line-height.demo.scss
@@ -54,15 +54,15 @@
 @mixin lhe-test-box-border() {
   border-width: var(--cds-global-space-1);
   border-style: solid;
-  border-color: var(--clr-color-neutral-300, #{variables.$clr-color-neutral-300});
+  border-color: var(--cds-alias-object-border-color);
 }
 @mixin lhe-test-box-pad-color() {
-  box-shadow: inset 0 0 0 var(--cds-global-space-6) var(--clr-color-success-100, #{variables.$clr-color-success-100});
+  box-shadow: inset 0 0 0 var(--cds-global-space-6) var(--cds-alias-status-success);
 }
 
 .title {
   border-bottom: var(--cds-global-space-2) solid;
-  border-bottom-color: var(--clr-color-neutral-800, #{variables.$clr-color-neutral-800});
+  border-bottom-color: var(--cds-alias-status-neutral);
 }
 
 .box-test,
@@ -141,7 +141,7 @@
 }
 
 h1.test-subject {
-  box-shadow: inset 0 0 0 var(--cds-global-space-5) var(--clr-color-warning-500, #{variables.$clr-color-warning-500});
+  box-shadow: inset 0 0 0 var(--cds-global-space-5) var(--cds-alias-status-warning);
   padding: var(--cds-global-space-5);
 
   &.line-height-eraser {
@@ -150,7 +150,7 @@ h1.test-subject {
 }
 
 .lhe-test-well {
-  background: var(--clr-color-neutral-100, #{variables.$clr-color-neutral-100});
+  background: var(--cds-alias-status-neutral);
   margin-top: var(--cds-global-space-9);
   padding: var(--cds-global-space-6);
   border-radius: var(--cds-alias-object-border-radius-100);
