--- a/projects/angular/src/utils/_components.clarity.scss
+++ b/projects/angular/src/utils/_components.clarity.scss
@@ -86,7 +86,7 @@
 //Badges
 // depends on variables.clarity, mixins.clarity, color.clarity, helpers.clarity, typography.clarity
 
-@forward '../emphasis/badges.clarity';
+@forward '../emphasis/badge/badges.clarity';
 
 //Labels
 // depends on variables.clarity, mixins.clarity, color.clarity, helpers.clarity, typography.clarity, badges.clarity
