--- a/projects/angular/src/utils/_variables.clarity.scss
+++ b/projects/angular/src/utils/_variables.clarity.scss
@@ -43,7 +43,7 @@
 
 // Badge
 //Has code sharing with labels
-@forward '../emphasis/variables.badges';
+@forward '../emphasis/badge/variables.badges';
 // END: Badge
 
 // Button
