--- a/projects/demo/src/app/badges/badge-statuses.demo.html
+++ b/projects/demo/src/app/badges/badge-statuses.demo.html
@@ -5,6 +5,15 @@
   ~ The full license information can be found in LICENSE in the root directory of this project.
   -->
 
+<h2>Angular Badges</h2>
+<div class="clr-example">
+  <clr-badge [clrBadgeColor]="ClrBadgeColors.Info">2</clr-badge>
+  <clr-badge [clrBadgeColor]="ClrBadgeColors.Success">3</clr-badge>
+  <clr-badge [clrBadgeColor]="ClrBadgeColors.Warning">12</clr-badge>
+  <clr-badge [clrBadgeColor]="ClrBadgeColors.Danger">15</clr-badge>
+</div>
+
+<h2>CSS Badges</h2>
 <div class="clr-example">
   <span class="badge badge-info">2</span>
   <span class="badge badge-success">3</span>
