--- a/projects/angular/src/emphasis/badge/_badges.clarity.scss
+++ b/projects/angular/src/emphasis/badge/_badges.clarity.scss
@@ -6,9 +6,9 @@
  */
 
 @use 'sass:meta';
-@use '../utils/mixins';
+@use '../../utils/mixins';
 @use 'variables.badges' as badges-variables;
-@use '../utils/variables/variables.density' as density;
+@use '../../utils/variables/variables.density' as density;
 @use '@cds/core/tokens/tokens.scss';
 
 @include meta.load-css('properties.badges');
