--- a/projects/demo/src/app/badges/badge-colors.demo.html
+++ b/projects/demo/src/app/badges/badge-colors.demo.html
@@ -5,6 +5,24 @@
   ~ The full license information can be found in LICENSE in the root directory of this project.
   -->
 
+<h2>Angular Badge</h2>
+<div class="clr-example">
+  <div>
+    <clr-badge>11</clr-badge>
+    <clr-badge [clrBadgeColor]="ClrBadgeColors.Purple">15</clr-badge>
+    <clr-badge [clrBadgeColor]="ClrBadgeColors.Blue">2</clr-badge>
+    <clr-badge [clrBadgeColor]="ClrBadgeColors.Orange">3</clr-badge>
+    <clr-badge [clrBadgeColor]="ClrBadgeColors.LightBlue">12</clr-badge>
+    <clr-badge [clrBadgeColor]="'1'">90</clr-badge>
+    <clr-badge [clrBadgeColor]="'2'">51</clr-badge>
+    <clr-badge [clrBadgeColor]="'3'">25</clr-badge>
+    <clr-badge [clrBadgeColor]="'4'">32</clr-badge>
+    <clr-badge [clrBadgeColor]="'5'">57</clr-badge>
+    <clr-badge [clrBadgeColor]="'gray'">12</clr-badge>
+  </div>
+</div>
+
+<h2>CSS Badge</h2>
 <div class="clr-example">
   <div>
     <span class="badge">1</span>
