feat(combobox): allow to be editable

--- a/projects/angular/src/forms/combobox/_combobox.clarity.scss
+++ b/projects/angular/src/forms/combobox/_combobox.clarity.scss
@@ -227,6 +227,10 @@
         padding-left: density.$clr-base-horizontal-offset-2xl;
       }
     }
+
+    &-hidden {
+      opacity: 0;
+    }
   }
 
   .clr-combobox-option {
