--- a/projects/angular/src/utils/_components.clarity.scss
+++ b/projects/angular/src/utils/_components.clarity.scss
@@ -91,7 +91,7 @@
 //Labels
 // depends on variables.clarity, mixins.clarity, color.clarity, helpers.clarity, typography.clarity, badges.clarity
 
-@forward '../emphasis/labels.clarity';
+@forward '../emphasis/label/labels.clarity';
 
 //Progress Bars
 //depends on variables.clarity, helpers.clarity, color.clarity, cards.clarity
