--- a/projects/angular/src/utils/_variables.clarity.scss
+++ b/projects/angular/src/utils/_variables.clarity.scss
@@ -38,7 +38,7 @@
 
 // Label
 // Has code sharing with badges
-@forward '../emphasis/variables.label';
+@forward '../emphasis/label/variables.label';
 // END: Label
 
 // Badge
