--- a/projects/angular/src/emphasis/label/_properties.label.scss
+++ b/projects/angular/src/emphasis/label/_properties.label.scss
@@ -5,7 +5,7 @@
  * The full license information can be found in LICENSE in the root directory of this project.
  */
 
-@use '../utils/mixins';
+@use '../../utils/mixins';
 @use '@cds/core/tokens/tokens.scss';
 
 @include mixins.exports('label.properties') {
