feat(label): update storybook and demo page

--- a/projects/angular/src/emphasis/label/_labels.clarity.scss
+++ b/projects/angular/src/emphasis/label/_labels.clarity.scss
@@ -141,6 +141,7 @@
 
       .badge {
         background: label-variables.$clr-label-disabled-color;
+        color: label-variables.$clr-label-bg-disabled-color;
       }
     }
   }
