--- a/projects/demo/src/app/labels/labels-with-badges.demo.html
+++ b/projects/demo/src/app/labels/labels-with-badges.demo.html
@@ -5,6 +5,23 @@
   ~ The full license information can be found in LICENSE in the root directory of this project.
   -->
 
+<h2>Angular Label</h2>
+<div class="clr-example">
+  <div>
+    <clr-label [clrColor]="ClrLabelColors.Purple" [clrBadgeContent]="'1'" [clrClickable]="true" [clrClosable]="true"
+      >Austin</clr-label
+    >
+    <clr-label [clrColor]="ClrLabelColors.Blue" [clrBadgeContent]="'2'" [clrClickable]="true">New York</clr-label>
+    <clr-label [clrColor]="ClrLabelColors.Orange" [clrBadgeContent]="'3'" [clrClickable]="true">Palo Alto</clr-label>
+    <clr-label [clrColor]="ClrLabelColors.LightBlue" [clrBadgeContent]="'12'" [clrClickable]="true"
+      >San Francisco</clr-label
+    >
+    <clr-label [clrBadgeContent]="'15+'" [clrClickable]="true">Seattle</clr-label>
+    <clr-label [clrBadgeContent]="'0'" [clrClickable]="true" [clrDisabled]="true">Philadephia</clr-label>
+  </div>
+</div>
+
+<h2>CSS Label</h2>
 <div class="clr-example">
   <a href="javascript://" class="label label-purple clickable">
     <span class="text">Austin</span>
